# TSRoots

./: .coverage  .coveragerc  .gitignore  1D_xSinx_function.py  GIF_plots.py  LICENSE  README.md  notebook_getting_started.ipynb  pyproject.toml
.github/workflows/: python-test.yml
docs/img/: GIF_plots.py
docs/tutorials/: 16D_ackley_TSRoots.py  2d_himmelblau_function.ipynb  notebook_getting_started.ipynb  quick_start.py
recipe/: meta.yaml
shell/: .coverage  run_all_tests.py
src/tsroots/: __init__.py  decoupled_GP.py  max_k_sum.py  optim.py  preprocessor.py  utils.py
src/tsroots.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_TS_roots.py  test_decoupled_GP.py  test_preprocessor.py
